Adding page transitions

--- a/src/client/less/Page.less
+++ b/src/client/less/Page.less
@@ -1,7 +1,11 @@
+.page {
+  position: absolute;
+}
+
 .heading {
   color: pink;
+}
 
-  .subHeading {
-    color: blue;
-  }
+.startTransparent {
+  opacity: 0;
 }
