--- a/src/client/less/App.less
+++ b/src/client/less/App.less
@@ -1,3 +1,8 @@
 body {
   font-family: "Helvetica Neue", Helvetica, sans-serif;
 }
+
+.transitionGroup {
+  position: relative;
+  display: block;
+}
